# strands

./: .env.example  .gitignore  AGENT_ARCHITECTURE_DESIGN.md  AUTONOMOUS_EVOLUTION_GUIDE.md  AUTONOMOUS_LEARNING_ENGINE.md  CI_CD_SETUP.md  CORRELATOR_AGENT_IMPLEMENTATION.md  DATA_FLOW_ARCHITECTURE.md  DISASTER_RECOVERY.md  DOCKER_FRONTEND_GUIDE.md  Dockerfile  Dockerfile.analyzer  Dockerfile.simulator  EMBEDDING_AGENT_EXPLAINED.md  ENTERPRISE_SRE_GUIDE.md  ENTRY_POINT_ARCHITECTURE.md  FRONTEND_ACCESS_GUIDE.md  FRONTEND_MATURITY_ANALYSIS.md  FRONTEND_REFACTOR_README.md  INTEGRATION_TEST_REPORT.md  LLM_IN_STRANDS_FLOW.md  NEO4J_DATA_MODEL.md  OBSERVABILITY.md  PRODUCTION_DEPLOYMENT.md  PROMETHEUS_ANALYZER_GUIDE.md  PROVIDER_SELECTION_AND_INDEX.md  README.md  RECOMMENDER_AGENT_IMPLEMENTATION.md  RELATORIO_TESTES_INTEGRACAO.md  SECURITY_HARDENING.md  SERVICENOW_INCIDENT_FLOW.md  TESTING_GUIDE.md  agent_http.py  alert_trigger.sh  docker-compose-frontend.yml  docker-compose-test.yml  docker-compose.yaml  environment.yml  error_simulator.py  http_provider.py  (+23 more)
.Jules/: palette.md
config/: confidence_weights_v2026_02.yaml
docs/: AGENTS.md
examples/: GITHUB_MODELS_GUIDE.md  MULTI_AGENT_README.md  README.md  agent_agentes_pipeline.py  agent_agentes_pipeline_force_json.py  agent_agentes_pipeline_real.py  agent_github_models.py  agent_with_correlator.py  demo_correlator_recommender.py  demo_full_graph.py  demo_graph_agent_qdrant.py  demo_graph_agent_rag.py  demo_graph_swarm.py  full_grafana_analysis.py  full_grafana_analysis_agentes.py  full_grafana_analysis_llm.py  mock_agents.py  multi_agent_demo.py  ollama_example.py  orchestrator.py  pipeline_ollama.py  pipeline_ollama_test.py  read_grafana_dashboard.py  (+6 more)
(+282 files in other folders)
